Fix nav alignment

--- a/less/agency.less
+++ b/less/agency.less
@@ -207,6 +207,7 @@ h1, h2, h3, h4, h5, h6 {
 				li{
 					float: left;
 					margin: 14px 5px;
+					clear: none;
 					a{
 						text-decoration: none;
 					}
